--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <header>
-    <title>ONNX Runtime JavaScript examples: Quick Start - Web (using bundler)</title>
+    <title>ONNX Runtime Web Testing (using tag)</title>
 </header>
 
 <body>
@@ -9,7 +9,6 @@
     <img id='image' src="./images/Play_1291.jpg" alt="Sail Boat">
     <div id="output"></div>
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
-    <!-- <script src="./dist/bundle.min.js"></script> -->
     <script src="main.js"></script>
 </body>
 
